terraform-ecs-fargate/ecs-fargate-priv-sub1/sg.tf
# Security Group
resource "aws_security_group" "fargate_sg" {
  name_prefix = "fargate-sg"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["18.0.1.0/24"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
